# Neuron

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20250326_0001_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/api/: analysis.py  auth.py  dashboard.py  demo.py  deps.py  deps_sdk.py  models.py  reports.py  sdk.py
backend/app/core/: auth.py  config.py  database.py  db_migrations.py
backend/app/interpretability/: __init__.py  compliance_detector.py  demo_data.py  explainer.py  feature_extraction.py  lending_probes.py  report_generator.py  sae.py  trajectory.py
backend/app/models/: __init__.py  analysis.py  api_key.py  model_registry.py  report.py  user.py
backend/app/schemas/: analysis.py  auth.py  auth_keys.py  dashboard.py  demo.py  model_registry.py  report.py  sdk.py
backend/app/services/: analysis_runner.py  analysis_watchdog.py  checkpoint_download.py  job_queue.py  pdf_report.py  quantization.py  s3_artifacts.py  tracker_cache.py
backend/app/workers/: __init__.py  celery_app.py  tasks.py
backend/scripts/: reset_ml_data.py  run_celery_worker.sh  start_backend.sh  train_sae_layer0.py
backend/tests/: test_quantization.py  test_sae.py  test_sdk_security.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css  main.jsx  uiLabels.js
frontend/src/components/: Layout.jsx
frontend/src/components/Demo/: DriftSimulator.jsx
frontend/src/components/FeatureMap/: FeatureHeatmap.jsx
frontend/src/components/LayerTrajectory/: LayerTrajectoryChart.jsx
frontend/src/hooks/: useDebounced.js
frontend/src/pages/: Analysis.jsx  Dashboard.jsx  Demo.jsx  Documentation.jsx  Landing.jsx  Login.jsx  ModelRegistry.jsx  Onboarding.jsx  Reports.jsx  Settings.jsx
frontend/src/services/: api.js  demoApi.js
frontend/src/utils/: bciDisplay.js  pollBackoff.js
sdk/: __init__.py  demo_retraining_narrative.py  demo_ring_narrative.py  neuron.py  neuron_sdk.py  setup.py
(+2 files in other folders)
