[project]
name = "neuron-backend"
version = "0.1.0"
description = "Neuron — mechanistic interpretability compliance API"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "torch>=2.3.0",
    "transformer-lens>=2.0.0",
    "transformers>=4.44.0",
    "scikit-learn>=1.5.0",
    "numpy>=2.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.0.0",
    "reportlab>=4.2.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.1,<5",
    "python-multipart>=0.0.9",
    "einops>=0.8.0",
    "email-validator>=2.0.0",
    "datasets>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
