[project]
name = "neuron-backend"
version = "0.1.0"
description = "Neuron — mechanistic interpretability compliance API"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.3.0",
    "transformer-lens>=2.0.0",
    "transformers>=4.44.0",
    "datasets>=2.14.0",
    "scikit-learn>=1.5.0",
    "numpy>=1.26.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.1,<5",
    "python-multipart>=0.0.9",
    "reportlab>=4.2.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "anthropic>=0.40.0",
    "requests>=2.32.0",
    "einops>=0.8.0",
    "email-validator>=2.0.0",
    "better-profanity>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
